# hcalc

./: .gitignore  .gitmodules  LICENSE  hcalc.cabal
h-calc/: LICENSE  h-calc.cabal
h-calc/src/: HCalc.hs
h-calc/src/HCalc/: Internal.hs
h-calc/test/: HCalcSpec.hs
src/: Main.hs
